# train-mcp

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.codex/: config.toml
.github/workflows/: deploy.yml
charts/train-mcp/: Chart.yaml  values.yaml
charts/train-mcp/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
mcp/: .dockerignore  Cargo.toml  Dockerfile  README.md
mcp/bootstrap/: 03_restore_station_data.sh
mcp/charts/train-mcp/: values.yaml
mcp/charts/train-mcp/templates/: serviceaccount.yaml  servicemonitor.yaml
mcp/monitoring/grafana/: GIT_SYNC.md
mcp/sql/: 001_app_schema.sql  002_transit_schema.sql
mcp/src/: auth.rs  lib.rs  main.rs  metrics.rs  persistence.rs  server.rs
mcp/src/executor/: mod.rs  quickjs.rs
mcp/src/executor/codemode/: execute.rs  mod.rs  transit_ops.rs
mcp/src/oebb/: client.rs  filter.rs  mod.rs  normalize.rs  rank.rs
mcp/src/transit/: oebb.rs
monitoring/grafana/: kube-prometheus-stack-git-sync-values.yaml  train-mcp-dashboard.json
src/: catalog.rs  lib.rs  main.rs  metrics.rs  server.rs
src/executor/codemode/: search.rs
src/oebb/: client.rs  filter.rs  normalize.rs  types.rs
src/transit/: mod.rs  provider.rs
tests/: e2e.rs
train/: .env.example  README.md  app.json  package-lock.json  package.json
train/src/: polyfills.ts
train/src/app/: _layout.tsx  index.tsx
train/src/app/api/: chat+api.ts
train/src/lib/: api.ts
train/src/types/: ungap-structured-clone.d.ts
