[package]
name = "train-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
# MCP SDK
rmcp = { version = "0.16", features = ["server", "macros", "transport-streamable-http-server"] }

# HTTP server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tower-service = "0.3"
futures = "0.3"

# Embedded JS runtime (CodeMode executor)
rquickjs = { version = "0.9", features = ["futures", "parallel"] }

# HTTP client for ÖBB API
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# Cache
moka = { version = "0.12", features = ["future"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
once_cell = "1"

# Error handling
anyhow = "1"
thiserror = "2"
urlencoding = "2"
async-trait = "0.1"
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "chrono"] }

# Fuzzy string matching & Unicode transliteration
strsim = "0.11"
deunicode = "1.6"

[dev-dependencies]
rmcp = { version = "0.16", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
tokio = { version = "1", features = ["full", "test-util"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tower-service = "0.3"
serde_json = "1"
